<resources>
    <string name="app_name">awesome-wandroid</string>

    <string name="title_home">首页</string>
    <string name="title_project">项目</string>
    <string name="title_wx_publish_num">公众号</string>
    <string name="title_mine">我</string>

    <string name="login_title">登录</string>
    <string name="register_title">注册</string>

    <string name="mine_title">个人中心</string>
    <string name="welcome_text">欢迎来到玩Android</string>
    <string name="wandroid_des">玩Android是一个每日推荐20~30篇Android优质文章的站点,提供Android常用工具和常用网站,并以知识体系的形式展现所有的文章分类。</string>
    <string name="login_or_register_text">登录/注册</string>
    <string name="collection_text">收藏列表</string>
    <string name="read_text">阅读列表</string>
    <string name="rank_text">排行榜</string>
    <string name="integral_text">积分规则</string>
    <string name="setting_text">设置</string>
    <string name="logout_text">退出</string>

    <string name="user_level">等级：%1$d</string>
    <string name="user_coin">积分：%1$d</string>
    <string name="user_rank">排名：%1$d</string>

    <string name="search_hint_text">帮你找到感兴趣的内容</string>
    <string name="search_des_text">输入标题或描述中的关键词找到更多内容</string>
    <string name="cancel_text">取消</string>
    <string name="hot_search_text">- 热门搜索词 -</string>
    <string name="search_wx_number_hint">%1$s带你发现更多干货...</string>

    <string name="empty_text">没有您想要的内容哦!!!</string>
    <string name="network_error">网络连接异常\n请检查您的Wi-Fi和手机网络是否正常</string>
    <string name="network_error_retry_text">重新加载</string>

    <string name="home_tab_latest_article_title">最新博文</string>
    <string name="home_tab_qr_title">每日一问</string>
    <string name="home_tab_latest_project_title">最新项目</string>

    <string name="top_text">置顶</string>
    <string name="new_text">新</string>

    <string name="menu_collection_text">点赞</string>
    <string name="can_not_open_app">无法打开</string>

</resources>
